--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enhanced Checklist</title>
+    <title>Enhanced Checklist - Dark Theme</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #2b2b2b;
             margin: 0;
             padding: 20px;
             line-height: 1.6;
+            color: #ecf0f1;
         }
         .container {
             max-width: 800px;
@@ -18,12 +19,12 @@
         }
         h1 {
             text-align: center;
-            color: #2c3e50;
+            color: #ecf0f1;
         }
         .group {
-            background-color: white;
+            background-color: #3b3b3b;
             border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
             margin-bottom: 20px;
             padding: 20px;
         }
@@ -35,7 +36,7 @@
         }
         .group-title {
             margin: 0;
-            color: #2c3e50;
+            color: #ecf0f1;
         }
         .delete-btn {
             background: none;
@@ -59,7 +60,27 @@
             align-items: center;
         }
         input[type="checkbox"] {
+            appearance: none;
+            width: 20px;
+            height: 20px;
+            border-radius: 4px;
             margin-right: 10px;
+            background-color: #444;
+            border: 2px solid #bdc3c7;
+            cursor: pointer;
+            position: relative;
+        }
+        input[type="checkbox"]:checked {
+            background-color: #2ecc71;
+            border-color: #2ecc71;
+        }
+        input[type="checkbox"]:checked::after {
+            content: "✔";
+            font-size: 14px;
+            color: #2b2b2b;
+            position: absolute;
+            left: 3px;
+            top: -1px;
         }
         .checked {
             text-decoration: line-through;
@@ -72,8 +93,10 @@
         input[type="text"] {
             flex-grow: 1;
             padding: 8px;
-            border: 1px solid #bdc3c7;
+            border: 1px solid #7f8c8d;
             border-radius: 4px;
+            background-color: #444;
+            color: #ecf0f1;
         }
         .add-btn {
             background-color: #2ecc71;
@@ -100,7 +123,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Enhanced Checklist</h1>
+        <h1>Enhanced Checklist - Dark Theme</h1>
         <div id="groups"></div>
         <button onclick="createGroup()" class="create-group-btn">Create New Group</button>
     </div>
